<resources>
    <string name="app_name">CSTAcademy 2024</string>
    <string name="hello_world">Hello World!</string>
    <string name="press_me">Press me!</string>
    <string name="login">Login</string>
    <string name="register">Go To Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyBwc1_Z_Fb-z4kz9xOng7SC_oxlN4A1YeQ</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="dark_mode">Nighttime Viewing Experience</string>
</resources>